<resources>
    <string name="app_name">Nutrado</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="image_alt">Product image</string>
    <string name="energy_kj">%1$s kCal</string>
    <string name="qr_alt">Open QR Reader</string>
    <string name="lists_label">Lists</string>
    <string name="back">Back</string>
    <string name="menu">Open menu</string>
    <string name="setting_num_prod">Number of products to load</string>
    <string name="setting_category_prod">Category of products to load</string>
    <string name="setting_dark_mode">Dark mode</string>
    <string name="setting_override_dark_mode">Override system dark mode</string>
    <string name="list_icon">List icon</string>
    <string name="select_list">Select the list to save to</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="nutrition_grade_txt">Nutrition grade</string>
    <string name="delete">Delete</string>
    <string name="add_list">Create a list</string>
    <string name="list_name">List name</string>
    <string name="list_desc">List description</string>
    <string name="list_color">List color</string>
    <string name="create">Create</string>
    <string name="missing_error">%1$s is required</string>
    <string name="delete_list">Delete list</string>
    <string name="delete_list_msg">Are you sure you want to delete the current list?</string>
    <string name="yes">Yes</string>
    <string name="offline">Offline</string>
    <string name="offline_desc">Data downloaded upon last execution of the app</string>
    <string name="online">Online</string>
    <string name="online_desc">Products loaded from OpenFoodFacts API</string>
    <string name="input_barcode">Input barcode</string>
    <string name="ingredients">Ingredients</string>
    <string name="star_icon" translatable="false">\@drawable/ic_outline_star_24</string>
    <string name="basket_icon" translatable="false">\@drawable/ic_outline_shopping_basket_24</string>
    <string name="smile_icon" translatable="false">\@drawable/ic_outline_sentiment_very_satisfied_24</string>
    <string name="cart_icon" translatable="false">\@drawable/ic_outline_local_grocery_store_24</string>
    <string name="bookmark_icon" translatable="false">\@drawable/ic_outline_bookmark_24</string>
    <string name="wifi_icon" translatable="false">\@drawable/ic_outline_wifi_24</string>
    <string name="wifi_off_icon" translatable="false">\@drawable/ic_outline_wifi_off_24</string>
</resources>